# yts-movies

./: Cargo.toml  README.md
examples/: async.rs
src/: lib.rs
src/client/: blocking.rs  default.rs  mod.rs  parameter.rs
src/core/: mod.rs  model.rs  response.rs
