[package]
name = "yts-movies"
version = "0.2.3"
edition = "2024"
description = "Library to search YTS movies info and torrent links"
authors = ["Javier Orfo <javierorfo@protonmail.com>"]
license = "MIT"
repository = "https://github.com/javiorfo/yts-movies"
homepage = "https://github.com/javiorfo/yts-movies#readme"
keywords = ["yts", "yify", "yts-movies", "yts-torrents", "torrents"]

[lib]
name = "yts_movies"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.20", optional = true }
scraper = "0.23.1"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["async"]
async = ["dep:reqwest"]
blocking = ["dep:reqwest", "reqwest/blocking"]

[[example]]
name = "async"

[[example]]
name = "blocking"
required-features = ["blocking"]
